@@ -1,16 +1,19 @@
 <?xml version = '1.0' encoding = 'UTF-8'?>
 <!DOCTYPE KDevPrjSession>
 <KDevPrjSession>
- <DocsAndViews NumberOfDocuments="3" >
-  <Doc0 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/json.c" >
-   <View0 Encoding="" line="1382" Type="Source" />
+ <DocsAndViews NumberOfDocuments="4" >
+  <Doc0 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/json.h" >
+   <View0 Encoding="" Type="Source" />
   </Doc0>
-  <Doc1 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/test.c" >
-   <View0 Encoding="" line="96" Type="Source" />
+  <Doc1 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/json.c" >
+   <View0 Encoding="" line="305" Type="Source" />
   </Doc1>
-  <Doc2 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/json.h" >
-   <View0 Encoding="" line="191" Type="Source" />
+  <Doc2 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/rstring/rstring.h" >
+   <View0 Encoding="" line="73" Type="Source" />
   </Doc2>
+  <Doc3 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/rstring/rstring.c" >
+   <View0 Encoding="" line="33" Type="Source" />
+  </Doc3>
  </DocsAndViews>
  <pluginList>
   <kdevdebugger>
@@ -25,7 +28,6 @@
    <bookmarks>
     <bookmark url="/home/rui/development/C/json/src/json.c" >
      <mark line="1398" />
-     <mark line="1349" />
     </bookmark>
     <bookmark url="/home/rui/development/C/json/src/rstring/rstring.c" >
      <mark line="184" />
